Header - Fixed z-index issue

--- a/src/components/ui/navbar/Navbar.module.css
+++ b/src/components/ui/navbar/Navbar.module.css
@@ -3,9 +3,7 @@
 	display: flex;
 	justify-content: center;
 	/* border-bottom: 1px solid black; */
-	background: url("/src/assets/images/bg.svg");
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	background: transparent;
 	position: relative;
 	z-index: 1000;
 }
